Fix word wrapping of reactions (#810)
* Fix word wrapping of reactions

* Update _feeds.scss

--- a/app/styles/pages/_media-pages.scss
+++ b/app/styles/pages/_media-pages.scss
@@ -317,6 +317,7 @@
     font-weight: 700;
     a {
       color: inherit;
+      word-break: break-word;
       &:hover {
         color: $body-link-color;
       }
